<resources>
    <string name="app_name" translatable="false">LoreBase</string>
    <string name="username" translatable="false">用户名</string>
    <string name="login" translatable="false">登陆</string>
    <string name="mainpage" translatable="false">首页</string>
    <string name="tree" translatable="false">知识体系</string>
    <string name="relax">视频学习</string>

    <string name="passWord">密码</string>
    <string name="re_enter">再次输入密码</string>
    <string name="remember">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="collect">收藏</string>
    <string name="we_chat">公众号</string>
    <string name="project">项目</string>

    <!-- About-->
    <string name="author">jankinChen</string>
    <string name="github">github.com/kBaseczy</string>
    <string name="email">folio96@163.com</string>
    <string name="AI">AI</string>
    <string name="SDK">BaiDu SDK</string>

    <!-- home-->
    <string name="viewflipper">ViewFlipper</string>
    <string name="hot_news">hot</string>
    <string name="hot_content">content</string>
    <string name="navigation">导航</string>
    <!-- addCategory -->
    <string name="categoryName">categoryName</string>

    <!-- navMenu-->
    <string name="nav_my_collect">收藏</string>
    <string name="nav_my_share">分享</string>
    <string name="nav_my_uncollect">取消收藏</string>
    <string name="nav_todo">待办</string>
    <string name="nav_browser">浏览历史</string>
    <string name="nav_position">实时位置</string>
    <string name="nav_setting">设置</string>
    <string name="nav_about">关于我们</string>
    <string name="nav_speech">语音搜索</string>
    <string name="nav_logout">注销</string>

    <string name="action_share">分享</string>
    <string name="action_browser">浏览器中打开</string>
    <string name="action_search">搜索</string>

    <string name="hot_search">热搜</string>
    <string name="clear_all">清除</string>
    <string name="history_search">历史搜索</string>

    <string name="start_explore">此刻开始</string>

    <string name="tip">Tip❤</string>
    <string name="tip_content_logout">确定注销吗?(点击空白处取消)</string>
    <string name="tip_content_clear_history">确定清除吗?(点击空白处取消)</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="have_account">已经有账号?</string>
    <string name="list_time">list_time</string>
    <string name="description">description</string>
    <string name="todo">待办清单</string>
    <string name="like_article">like article</string>

    <string name="feed_back">反馈</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="empty">抱歉没有记录，等待添加....</string>
    <string name="others">其他</string>
    <string name="chapter">chapter</string>

    <!-- SearchView -->
    <string name="register">还没有账号?</string>
    <string name="sign_up">注册</string>
    <string name="Exit">退出</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">阅读提醒</string>
    <string name="pref_description_social_recommendations">会定时提醒您
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_my_setting">MySettingActivity</string>
    <string name="cn_launch">每日阅读，根本停不下来。</string>
    <string name="en_launch">Reading every day, can\'t stop at all.</string>
    <string name="githb">Github</string>
    <string name="mail">邮箱</string>
    <string name="contact">联系方式</string>
    <string name="_2019_lorebase">© 2019 LoreBase</string>


    //todo
    <string name="todo01">待办</string>
    <string name="todo02">已完成</string>
    <string name="input_todo_name">输入待办名称，如：准备演示PPT</string>
    <string name="input_todo_des">输入待办详情，非必填，如：\n1、制作演示PPT\n2、预定会议室\n3、通知参加会议人员\n4、提前10分钟准备会议环境</string>
    <string name="save">保存</string>
    <string name="todo_title">标题</string>
    <string name="des">内容</string>
    <string name="todoAdd">添加</string>
    <string name="todoEdit">编辑</string>
    <string name="todoDetail">详情</string>
    <string name="input_todo_name_toast">请输入待办名称</string>
    <string name="dead_line">dead line</string>
    <string name="switchMap">switch</string>
    <string name="my_collect">我的收藏</string>
    <string name="app_information">应用信息</string>
    <string name="read_position">阅读地点</string>
</resources>
