<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/ic_collect"
            android:title="@string/nav_my_collect" />

        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_todo_default_24dp"
            android:title="@string/nav_todo" />

        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_browser" />
        <item
            android:id="@+id/nav_position"
            android:icon="@drawable/ic_position"
            android:title="@string/nav_position" />
        <item
            android:id="@+id/nav_speech"
            android:icon="@drawable/ic_speech"
            android:title="@string/nav_speech" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/nav_setting" />

    </group>

    <!--<item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_white_24dp"
                android:title="@string/nav_logout" />

            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/Exit" />

        </menu>
    </item>-->
</menu>