<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/viewBackground"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_24"
        android:paddingTop="@dimen/dp_60"
        android:paddingRight="@dimen/dp_24">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="800dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            app:riv_corner_radius="@dimen/dp_80"
            android:src="@mipmap/cherry" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/username_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/username"
                android:hint="@string/username"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/username"
                android:hint="@string/passWord"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rememberPWD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/remember"
                android:textColor="@color/lightBlue"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/autoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/autoLogin"
                android:textColor="@color/lightBlue"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@drawable/login_btn_style"
            android:gravity="center"
            android:padding="@dimen/dp_12"
            android:text="@string/login"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/have_no_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_24"
            android:gravity="center"
            android:text="@string/register" />

    </LinearLayout>
</ScrollView>