<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/viewBackground"
    app:cardCornerRadius="@dimen/dp_20"
    app:cardElevation="@dimen/dp_10"
    android:layout_margin="@dimen/dp_20"
    android:background="@drawable/item_click"
    android:padding="@dimen/dp_20">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/item_content_padding"
        android:paddingEnd="@dimen/item_content_padding"
        android:paddingTop="@dimen/item_content_padding"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tv_article_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            tools:text="@string/author"
            android:textColor="@color/item_author"
            android:textSize="@dimen/item_tv_author" />

        <TextView
            android:id="@+id/tv_article_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            tools:text="@string/list_time"
            android:textColor="@color/item_date"
            android:textSize="@dimen/item_tv_date" />

        <TextView
            android:id="@+id/article_title"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_article_author"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_8"
            android:ellipsize="end"
            android:gravity="top|start"
            android:lineSpacingExtra="2dp"
            android:maxLines="2"
            android:paddingBottom="@dimen/dp_6"
            android:textColor="@color/item_title"
            android:textSize="@dimen/item_tv_title" />

        <TextView
            android:id="@+id/tv_article_chapterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/item_tv_tag"
            tools:text="@string/categoryName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_like_not"
                android:contentDescription="@string/like_article" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>