<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="275dp"
    android:layout_height="120dp"
    android:background="@drawable/tab_rectangle">

    <TextView
        android:id="@+id/tv_prompt"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/tip"
        android:textColor="#333333"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp"
        android:background="#25b3ff" />

    <TextView
        android:id="@+id/tv_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/tip_content_logout"
        android:textColor="#333333"
        android:textSize="16sp" />

    <View
        android:id="@+id/view_liner"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/tv_no"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:background="#e1e1e1" />

    <LinearLayout
        android:id="@+id/logout_cancel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/view1"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_toStartOf="@+id/tv_prompt">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#25b3ff"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="1.5dp"
        android:layout_height="48dp"
        android:layout_below="@+id/view_liner"
        android:layout_centerInParent="true"
        android:background="#e1e1e1" />

    <LinearLayout
        android:id="@+id/logout_ok"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/view1"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@+id/tv_prompt">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="#25b3ff"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>


