<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:text="@string/hot_search"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp_16" />

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/tag_flow_hot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:max_select="0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24">

        <TextView
            android:id="@+id/clear_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:drawablePadding="@dimen/dp_6"
            android:text="@string/clear_all"
            android:textColor="@color/Grey400" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/clear_history"
            android:text="@string/history_search"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/tag_flow_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:max_select="0" />
</LinearLayout>