<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.MySettingActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_setting"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:navigationIcon="@drawable/icon_back"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:titleTextColor="@color/item_title" />

        </com.google.android.material.appbar.AppBarLayout>

        <include layout="@layout/content_my_setting" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_app_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/dp_6"
            android:layout_marginStart="@dimen/dp_12"
            android:onClick="tv_app_info"
            android:background="@drawable/login_btn_style"
            android:text="@string/app_information"
            android:textColor="@color/item_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_brow_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/dp_6"
            android:layout_marginStart="@dimen/dp_12"
            android:onClick="tv_about_us"
            android:background="@drawable/login_btn_style"
            android:text="@string/nav_about"
            android:textColor="@color/item_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_6"
            android:layout_marginStart="@dimen/dp_12"
            android:background="@drawable/register_btn_style"
            android:gravity="center"
            android:onClick="tv_logoutClick"
            android:text="@string/nav_logout"
            android:textColor="@color/item_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_exit"
            android:background="@drawable/login_btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_6"
            android:layout_marginStart="@dimen/dp_12"
            android:gravity="center"
            android:onClick="tv_exit"
            android:text="@string/Exit"
            android:textColor="@color/item_title"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>