<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/viewBackground"
    app:cardCornerRadius="30dp"
    android:layout_margin="@dimen/dp_8"
    android:background="@drawable/item_click"
    android:padding="@dimen/dp_20"
    app:cardElevation="10dp"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/project_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@mipmap/cherry"
            android:scaleType="fitCenter"
            app:riv_corner_radius="20dip"
            app:riv_border_width="2dip"
            app:riv_border_color="#333333"
            app:riv_mutate_background="true"
            android:contentDescription="@string/todo" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="10dp"
            android:layout_weight="5">

            <TextView
                android:id="@+id/project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/item_title"
                android:textSize="@dimen/item_tv_title" />

            <TextView
                android:id="@+id/item_project_list_content_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/project_name"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:text="@string/description"
                android:maxLines="3"
                android:textColor="@color/item_desc"
                android:textSize="@dimen/item_tv_content" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/item_project_list_content_tv">

                <TextView
                    android:id="@+id/project_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/item_project_list_time_tv"
                    android:text="@string/app_name"
                    android:textColor="@color/item_author"
                    android:textSize="@dimen/item_tv_author" />

                <TextView
                    android:id="@+id/item_project_list_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/item_project_list_like_iv"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:text="@string/list_time"
                    android:textColor="@color/item_date"
                    android:textSize="@dimen/item_tv_date" />

                <ImageView
                    android:id="@+id/item_project_list_like_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/ic_like_not" />

            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>